syntax = "proto3";

package tickdb.ingest;

option go_package  = "proto/gen/ingest;ingestpb";

message Point{
    string measurement = 1;
    int64 timestamp_unix_nano = 2;
    map<string, string> tag = 3;
    map<string, string> fields =4;
}

message WriteRequest {Point point = 1;}
message BatchWriteRequest {repeated Point points =1;}

message WriteResponse {
    uint64 accepted = 1;
    uint64 rejected = 2;
    string error =3;
}

service InjestService {
    rpc Write(WriteRequest) returns (WriteResponse);
    rpc BatchWrite(BatchWriteRequest) returns (WriteResponse);
}



